# creative-ops-llm-review-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.build/: session-history.md
data/: brand_rules.json  channel_specs.json  golden_set.json  policy_rules.json
docs/: architecture.md  case-study.md
runs/evals/: benchmark-20260403100247.json
src/creative_ops_llm_review_agent/: __init__.py  api.py  eval_runner.py  observability.py  repair.py  scoring.py  utils.py
src/creative_ops_llm_review_agent/providers/: __init__.py  base.py  heuristic.py  ollama_chat.py  openai_responses.py
src/creative_ops_llm_review_agent/templates/: index.html
src/creative_ops_review_agent/: __init__.py  api.py  config.py  eval_runner.py  knowledge.py  mcp_server.py  models.py  observability.py  pipeline.py  scoring.py  tool_runtime.py
src/creative_ops_review_agent/providers/: base.py  factory.py  heuristic.py  ollama_chat.py  openai_responses.py
src/creative_ops_review_agent/templates/: index.html
tests/: test_eval_runner.py  test_mcp_server.py  test_observability.py  test_ollama_provider.py  test_openai_provider.py  test_pipeline.py  test_repair.py
